# fcrypt

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/fcrypt/: __init__.py  __main__.py  cli.py  core.py  tui.py
